refactor: update .gitignore, enhance print statements for clarity, and remove unused files

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ frontend/.env*
 deepfake_vs_real_image_detection/checkpoint-14282/*.pt
 deepfake_vs_real_image_detection/checkpoint-14282/*.bin
 deepfake_vs_real_image_detection/checkpoint-14282/*.safetensors
+
+deepfake-videos
+deepfake-videos-full
